tenzir/integration/data/reference/pipelines_local/test_chart_arguments/step_01.ref
error: unknown option `x`
 --> <input>:1:42
  |
1 | from stdin read json | chart pie value=b x=e
  |                                          ^ 
  |
  = usage: chart pie [name=<field>] [value=<fields>]
  = docs: https://docs.tenzir/operators/chart